--- a/index.html
+++ b/index.html
@@ -198,10 +198,11 @@
                 </form>
                 <h4>COMPLETE NOW</h4>
             </div>
+            <div style="clear: both"></div>
             <div class="list">
                 <ul>
                     <li><a href="#"><i class="fas fa-chevron-left"></i></a></li>
-                    <li><a href="#"><img src="images/bg_one.png" alt=""></a></li>
+                    <li><a href="#">1</a></li>
                     <li><a href="#">2</a></li>
                     <li><a href="#">3</a></li>
                     <li><a href="#"><i class="fas fa-chevron-right"></i></a></li>
